--- a/Testing/index.html
+++ b/Testing/index.html
@@ -3,6 +3,7 @@
   <head>
   </head>
   <body>
+    <div>This is version 3.0</div>
     <div id="jsTest1" class="d">Javascript is: Not working.</div>
     <div id="jsTest2" class="d">JQuery is: Not Loaded.</div>
     <input id="ajaxLoad" style="float:left"></input>
