--- a/Testing/index.html
+++ b/Testing/index.html
@@ -8,7 +8,7 @@
     <div id="jsTest2" class="d">JQuery is: Not Loaded.</div>
     <input id="ajaxLoad" style="float:left"></input>
     <button id="loadButton">Load Async</button>
-    <button id="StageTest">Click to Test</button>
+    <button id="stageTest">Click to Test</button>
     <p></p>
     <div id="stage"></div>
     <div id="errs">Errors:</div>
