--- a/Testing/index.html
+++ b/Testing/index.html
@@ -3,7 +3,7 @@
   <head>
   </head>
   <body>
-    <div>This is version 4.5</div>
+    <div>This is version 4.6</div>
     <div id="jsTest1" class="d">Javascript is: Not working.</div>
     <div id="jsTest2" class="d">JQuery is: Not Loaded.</div>
     <input id="ajaxLoad" style="float:left"></input>
@@ -46,18 +46,21 @@
       
       function loadAsync (link)
       {
-          $.getScript( link )
-              .done(function( script, textStatus ) 
-              {
-                  var newDiv = '<div class="d">TEMP: Loaded</div>';
-                  newDiv = newDiv.replace('TEMP', link);
-                  $('#ajaxLoad').val('');
-                  $('.d').last().append(newDiv);
-              })
-              .fail(function( jqxhr, settings, exception ) 
-              {
-                  document.getElementById("errs").innerHTML += "<p>" + "Triggered ajaxError handler: " + exception + "</p>";
-              });
+          if(link !== '')
+          {
+            $.getScript( link )
+                .done(function( script, textStatus ) 
+                {
+                    var newDiv = '<div class="d">TEMP: Loaded</div>';
+                    newDiv = newDiv.replace('TEMP', link);
+                    $('#ajaxLoad').val('');
+                    $('.d').last().append(newDiv);
+                })
+                .fail(function( jqxhr, settings, exception ) 
+                {
+                    document.getElementById("errs").innerHTML += "<p>" + "Triggered ajaxError handler: " + exception + "</p>";
+                });
+          }
       };
       
       function loadSync (link)
