--- a/Testing/index.html
+++ b/Testing/index.html
@@ -3,7 +3,7 @@
   <head>
   </head>
   <body>
-    <div>This is version 4.6</div>
+    <div>This is version 4.7</div>
     <div id="jsTest1" class="d">Javascript is: Not working.</div>
     <div id="jsTest2" class="d">JQuery is: Not Loaded.</div>
     <input id="ajaxLoad" style="float:left"></input>
@@ -44,8 +44,9 @@
         if(stage == 8){ stage8(); }
       }
       
-      function loadAsync (link)
+      function loadAsync ()
       {
+          var link = $('#ajaxLoad').val();
           if(link !== '')
           {
             $.getScript( link )
@@ -89,7 +90,7 @@
       {
           function bindAsyncLoad ()
           {
-              $('#loadButton').on('click', loadAsync($('#ajaxLoad').val()));
+              $('#loadButton').on('click', loadAsync());
           };
       }
       catch(err)
