--- a/Testing/index.html
+++ b/Testing/index.html
@@ -3,9 +3,8 @@
   <head>
   </head>
   <body>
-    <div>This is version 5.0</div>
+    <div>This is version 6.0</div>
     <div id="jsTest1" class="d">Javascript is: Not working.</div>
-    <div id="jsTest2" class="d">Combiner is: Not Loaded.</div>
     <input id="ajaxLoad" style="float:left"></input>
     <button id="loadButton">Load Async</button>
     <button id="stageTest">Click to Test</button>
@@ -34,9 +33,9 @@
       function stageTest()
       {
         var stage = nextStage++;
-        if(stage == 1){ stage3(); }
-        if(stage == 2){ stage1(); }
-        if(stage == 3){ stage2(); }
+        if(stage == 1){ stage1(); }
+        if(stage == 2){ stage2(); }
+        if(stage == 3){ stage3(); }
         if(stage == 4){ stage4(); }
         if(stage == 5){ stage5(); }
         if(stage == 6){ stage6(); }
@@ -102,6 +101,7 @@
       {
           // Anonymous "self-invoking" function
           (function() {
+              stage1();
               // Load the script
               var script = document.createElement("SCRIPT");
               script.src = 'http://asset01.drivewebsite.com/prod-web/Shared/CombinerOutput_JS.js.gz?v=10';
@@ -126,6 +126,7 @@
                       bindAsyncLoad();
                       $('#ClearErrors').on('click', function(){ document.getElementById("errs").innerHTML = ''});
                       bindStageTest();
+                      stage2();
                   }
                   catch(err)
                   {
@@ -140,20 +141,20 @@
           document.getElementById("errs").innerHTML += err.message;
       }
       
-      function stage1()
-      {
-          //loadSync('http://asset01.drivewebsite.com/prod-web/Shared/CombinerOutput_JS.js.gz?v=10');
-          $('#stage').html($('#stage').html() + '<p>Stage 1 Complete</p>');
-      }
       function stage2()
       {
-          LoadDDSGlobals();
+          //loadSync('http://asset01.drivewebsite.com/prod-web/Shared/CombinerOutput_JS.js.gz?v=10');
           $('#stage').html($('#stage').html() + '<p>Stage 2 Complete</p>');
       }
       function stage3()
       {
+          LoadDDSGlobals();
+          $('#stage').html($('#stage').html() + '<p>Stage 3 Complete</p>');
+      }
+      function stage1()
+      {
         try{ddsVars={platformId:"AWP",trackingLink:"https://localhost:1190/Cms/EventTracking/TrackEvent",page:{id:"70d39881-c79a-440c-a31b-c8f7c19dcdfe",name:"Home",notes:"Homepage",title:"Dominion Dealer Solutions | Any City, Any State"},site:{id:"3901b2b4-2cad-4c81-84b7-b068ae4ceb48",name:"Nissan Demo",url:"http://nissandemo.stage.drivewebsite.com",tags:""},search:{body:"",engine:"",make:"",model:"",stockType:"",trim:"",year:""},vehicle:{body:"",comment:"",dealer:{city:"",name:"",state:""},engine:"",make:"",model:"",stockNumber:"",stockType:"",trim:"",vin:"",year:""},data:{omnSuiteIdSite:"@Data.omnSuiteidsite",install:{dataium:"@Data.InstallDataiumCode",enquireJs:"@Data.InstallEnquireJS"},googleAnalyticsAccount:"@Data.googleAnalyticsAccount",dealer:{name:"Dominion Dealer Solutions",city:"Any City",state:"Any State",zip:"00000"},tms:{dealerCode:"@Data.toyotaDealerCode",regionCode:"@Data.toyotaRegionCode",districtCode:"@Data.toyotaDistrictCode",tda:"@Data.toyotaTDA"},sms:{dealerCode:"@Data.scionDealerCode",regionCode:"@Data.scionRegionCode",districtCode:"@Data.scionDistrictCode"}}};if("".indexOf("@")==-1){ddsVars.vehicle={body:"",comment:"",dealer:{city:"",name:"",state:""},engine:"",make:"",model:"",stockNumber:"",stockType:"",trim:"",vin:"",year:""}}}catch(err){ddsVars={}}
-        $('#stage').html($('#stage').html() + '<p>Stage 3 Complete</p>');
+        $('#stage').html($('#stage').html() + '<p>Stage 1 Complete</p>');
       }
       function stage4()
       {
