--- a/Testing/index.html
+++ b/Testing/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <script>try{ddsVars={platformId:"AWP",trackingLink:"https://localhost:1190/Cms/EventTracking/TrackEvent",page:{id:"70d39881-c79a-440c-a31b-c8f7c19dcdfe",name:"Home",notes:"Homepage",title:"Dominion Dealer Solutions | Any City, Any State"},site:{id:"3901b2b4-2cad-4c81-84b7-b068ae4ceb48",name:"Nissan Demo",url:"http://nissandemo.stage.drivewebsite.com",tags:""},search:{body:"",engine:"",make:"",model:"",stockType:"",trim:"",year:""},vehicle:{body:"",comment:"",dealer:{city:"",name:"",state:""},engine:"",make:"",model:"",stockNumber:"",stockType:"",trim:"",vin:"",year:""},data:{omnSuiteIdSite:"@Data.omnSuiteidsite",install:{dataium:"@Data.InstallDataiumCode",enquireJs:"@Data.InstallEnquireJS"},googleAnalyticsAccount:"@Data.googleAnalyticsAccount",dealer:{name:"Dominion Dealer Solutions",city:"Any City",state:"Any State",zip:"00000"},tms:{dealerCode:"@Data.toyotaDealerCode",regionCode:"@Data.toyotaRegionCode",districtCode:"@Data.toyotaDistrictCode",tda:"@Data.toyotaTDA"},sms:{dealerCode:"@Data.scionDealerCode",regionCode:"@Data.scionRegionCode",districtCode:"@Data.scionDistrictCode"}}};if("".indexOf("@")==-1){ddsVars.vehicle={body:"",comment:"",dealer:{city:"",name:"",state:""},engine:"",make:"",model:"",stockNumber:"",stockType:"",trim:"",vin:"",year:""}}}catch(err){ddsVars={}}</script>
-    <script src="http://asset04.drivewebsite.com/prod-web/Scripts/Inventory/search.js?v=10" type="text/javascript"></script>
+    <script src="http://asset01.drivewebsite.com/prod-web/Shared/CombinerOutput_JS.js.gz?v=10" type="text/javascript"></script>
     <script>LoadDDSGlobals();</script>
   </head>
   <body>
-    <div>This is version 7.2</div>
+    <div>This is version 7.3</div>
     <div id="jsTest1" class="d">Javascript is: Not working.</div>
     <input id="ajaxLoad" style="float:left"></input>
     <button id="loadButton">Load Async</button>
