--- a/Lan/index.html
+++ b/Lan/index.html
@@ -1,3 +1,10 @@
+<style>
+  img {
+    position: absolute;
+    left: 25px;
+  }
+</style>
+
 <h1>RPG</h1>
 <br><a href="https://www.slant.co/topics/1646/viewpoints/4/~lan-party-pc-games~magicka-wizard-wars">Magicka Wizard Wars 4v4 (DM, TDM)</a>
 <br><img src="https://maxcdn.icons8.com/Share/icon/Messaging//star1600.png" width="15px" height="15px"/><a href="http://store.steampowered.com/app/200210/Realm_of_the_Mad_God/">Realm of the Mad God (MMO)</a>
