--- a/Lan/index.html
+++ b/Lan/index.html
@@ -1,10 +1,5 @@
 <style>
-    a {
-        position: absolute;
-        left: 25px;
-    }
-
-    div {
+    span {
         padding-bottom: 15px;
     }
 </style>
