--- a/Lan/index.html
+++ b/Lan/index.html
@@ -2,6 +2,12 @@
     span {
         padding-bottom: 15px;
     }
+    img {
+        margin-left: -15px;
+    }
+    div {
+        margin-bottom: 15px;
+    }
 </style>
 
 <br>
