--- a/Lan/index.html
+++ b/Lan/index.html
@@ -6,7 +6,8 @@
         margin-left: -25px;
     }
     div {
-        margin-bottom: 30px;
+        margin-bottom: 10px;
+        padding-left: 20px;
     }
 </style>
 
